--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=hit-networking-base
 
 #DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/base
+spring.datasource.url=jdbc:mysql://localhost:3306/Hit_Product?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
