--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=hit-networking-base
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/base
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
