add create user

--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=hit-networking-base
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/base
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345678
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -29,13 +29,19 @@ cloudinary.api_secret=c5SDpNGAjEgLhILu9jgH4CkrZxM
 mail.username=quynh1512005@gmail.com
 mail.password=thod utj dvtl lvcz
 
-#Swagger
+#Swagger config
 springdoc.api-docs.enabled=true
 springdoc.packagesToScan=com.example.projectbase.controller
 springdoc.pathsToMatch=/**
-
+# swagger
+open.api.title = API document
+open.api.version = 1.0.0
+open.api.description = day la mo ta dau tien cho api
+open.api.serverUrl= http://localhost:8080/
+open.api.serverName = Server Test
 #Info Admin
 admin.username=adminkien
 admin.password=admin
 admin.lastName=Kien
 admin.firstName=Nguyen
+
