--- a/hit-networking-base/pom.xml
+++ b/hit-networking-base/pom.xml
@@ -124,6 +124,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
+			<version>5.6.15.Final</version>
 		</dependency>
 
 		<!-- JPA Annotation API -->
