--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -3,10 +3,11 @@ server.port=8080
 spring.application.name=hit-networking-base
 
 #DATABASE
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Hit_Product?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Hit_Network?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -31,8 +32,8 @@ mail.password=thod utj dvtl lvcz
 
 #Swagger
 springdoc.api-docs.enabled=true
-springdoc.packagesToScan=com.example.projectbase.controller
-springdoc.pathsToMatch=/**
+#springdoc.packagesToScan=com.example.hit_networking_base.controller
+#springdoc.pathsToMatch=/**
 
 #Info Admin
 admin.username=adminkien
