Add API for forgot password

--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -27,8 +27,12 @@ cloudinary.api_key=475435997951612
 cloudinary.api_secret=c5SDpNGAjEgLhILu9jgH4CkrZxM
 
 #Mail
-mail.username=quynh1512005@gmail.com
-mail.password=thod utj dvtl lvcz
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=giangchinhtgp@gmail.com
+spring.mail.password=qtlu klea iltq ptcs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Swagger
 springdoc.api-docs.enabled=true
