--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -22,9 +22,9 @@ jwt.access.expiration_time=60
 jwt.refresh.expiration_time=1440
 
 #Cloudinary
-cloudinary.cloud_name=dhxmuuq5d 
-cloudinary.api_key=475435997951612
-cloudinary.api_secret=c5SDpNGAjEgLhILu9jgH4CkrZxM
+cloudinary.cloud_name=dcgujp96u
+cloudinary.api_key=925151561748687
+cloudinary.api_secret=szBgMZIqZOrxbZSFoJKC3I7Ar8M
 
 #Mail
 spring.mail.host=smtp.gmail.com
@@ -36,6 +36,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Swagger
 springdoc.api-docs.enabled=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 #springdoc.packagesToScan=com.example.hit_networking_base.controller
 #springdoc.pathsToMatch=/**
 
