refactor: move credentials and configs to .env file

--- a/hit-networking-base/pom.xml
+++ b/hit-networking-base/pom.xml
@@ -190,6 +190,14 @@
 			<version>5.4.1</version>
 		</dependency>
 
+		<!--	apache-poi	-->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
