--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-#App
+# --- DATABASE ---
 server.port=8080
-spring.application.name=hit-networking-base
-
-#DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/Hit_Network?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.application.name=hit-networking
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
@@ -15,49 +12,32 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-#JWT
-jwt.secret=52344E62DC399D1A15AC51A65F1DE
-#Expiration time (minutes)
-jwt.access.expiration_time=60
-jwt.refresh.expiration_time=1440
 
-#Cloudinary
-cloudinary.cloud_name=dcgujp96u
-cloudinary.api_key=925151561748687
-cloudinary.api_secret=szBgMZIqZOrxbZSFoJKC3I7Ar8M
+# --- ADMIN DEFAULT ACCOUNT ---
+admin.username=${ADMIN_USERNAME}
+admin.password=${ADMIN_PASSWORD}
 
-#Mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=giangchinhtgp@gmail.com
-spring.mail.password=qtlu klea iltq ptcs
+# --- JWT ---
+jwt.secret=${JWT_SECRET}
+jwt.access.expiration_time=${JWT_ACCESS_EXPIRATION:60}
+jwt.refresh.expiration_time=${JWT_REFRESH_EXPIRATION:1440}
+
+# --- MAIL ---
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#Swagger config
-#
-#springdoc.packagesToScan=com.example.projectbase.controller
-#springdoc.pathsToMatch=/**
+# --- CLOUDINARY ---
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
-# swagger
-open.api.title = API document
-open.api.version = 1.0.0
-open.api.description = day la mo ta cho api
-open.api.serverUrl= http://localhost:8080/
-open.api.serverName = Server Test
-springdoc.api-docs.enabled=true
-
-
-#Info Admin
-#admin.username=adminkien
-#admin.password=admin
-#admin.lastName=Kien
-#admin.firstName=Nguyen
-
-#Apache Poi
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=20MB
-
-
+# --- SWAGGER ---
+open.api.title=${API_TITLE:API document}
+open.api.version=${API_VERSION:1.0.0}
+open.api.description=${API_DESCRIPTION:Mo ta API}
+open.api.serverUrl=${API_SERVER_URL:http://localhost:8080/}
+open.api.serverName=${API_SERVER_NAME:Server Test}
