fix redundant errors to clean code

--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # --- DATABASE ---
 server.port=8080
 spring.application.name=hit-networking
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/Hit_Network?createDatabaseIfNotExist=true}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
+
 
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
