--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 # --- DATABASE ---
-server.port=8080
+server.port=${PORT:8080}
 spring.application.name=hit-networking
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/Hit_Network?createDatabaseIfNotExist=true}
 spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:12345678}
+spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 
 #JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=${HB_DIALECT:org.hibernate.dialect.MySQL8Dialect}
 
 
 # --- ADMIN DEFAULT ACCOUNT ---
