--- a/hit-networking-base/.env.example
+++ b/hit-networking-base/.env.example
@@ -1,6 +1,6 @@
-DB_URL=jdbc:mysql://localhost:3306/Hit_Network?createDatabaseIfNotExist=true
+DB_URL=jdbc:mysql://localhost:3306/hit_network?createDatabaseIfNotExist=true
 DB_USERNAME=root
-DB_PASSWORD= your mySQL password
+DB_PASSWORD=12345678
 
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin1234
@@ -9,9 +9,9 @@ JWT_SECRET= your_jwt_secret
 JWT_ACCESS_EXPIRATION=60
 JWT_REFRESH_EXPIRATION=1440
 
-MAIL_USERNAME= your_email@example.com
-MAIL_PASSWORD=your_email_password
+MAIL_USERNAME=quynh1512005@gmail.com
+MAIL_PASSWORD=whzb uioe iwyd dkyg
 
-CLOUDINARY_CLOUD_NAME= your_cloud_name
-CLOUDINARY_API_KEY= your_cloud_api_key
-CLOUDINARY_API_SECRET= your_cloud_api_secret
+CLOUDINARY_CLOUD_NAME= dhxmuuq5d
+CLOUDINARY_API_KEY= 519743343918931
+CLOUDINARY_API_SECRET= WwApz9_iZmveFLf_ggJGp0hKDM0
