--- a/hit-networking-base/.env.example
+++ b/hit-networking-base/.env.example
@@ -1,17 +1,17 @@
 DB_URL=jdbc:mysql://localhost:3306/hit_network?createDatabaseIfNotExist=true
 DB_USERNAME=root
-DB_PASSWORD=12345678
+DB_PASSWORD=
 
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin1234
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
 
 JWT_SECRET= your_jwt_secret
 JWT_ACCESS_EXPIRATION=60
 JWT_REFRESH_EXPIRATION=1440
 
-MAIL_USERNAME=quynh1512005@gmail.com
-MAIL_PASSWORD=whzb uioe iwyd dkyg
+MAIL_USERNAME=
+MAIL_PASSWORD=
 
-CLOUDINARY_CLOUD_NAME= dhxmuuq5d
-CLOUDINARY_API_KEY= 519743343918931
-CLOUDINARY_API_SECRET= WwApz9_iZmveFLf_ggJGp0hKDM0
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
