add send email to user when create user and post

--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -43,3 +43,7 @@ open.api.version=${API_VERSION:1.0.0}
 open.api.description=${API_DESCRIPTION:Mo ta API}
 open.api.serverUrl=${API_SERVER_URL:http://localhost:8080/}
 open.api.serverName=${API_SERVER_NAME:Server Test}
+
+
+reset.password.url=${URL_RESET_PASSWORD:https://hit-network-system.onrender.com/auth/set-front?token=}
+
