add user column to check token and fix check token

--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -21,8 +21,8 @@ admin.password=${ADMIN_PASSWORD}
 
 # --- JWT ---
 jwt.secret=${JWT_SECRET}
-jwt.access.expiration_time=${JWT_ACCESS_EXPIRATION:60}
-jwt.refresh.expiration_time=${JWT_REFRESH_EXPIRATION:1440}
+jwt.accessExpirationTime=${JWT_ACCESS_EXPIRATION:1000}
+jwt.refreshExpirationTime=${JWT_REFRESH_EXPIRATION:1440}
 
 # --- MAIL ---
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
