--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -37,6 +37,11 @@ cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
+# --- FILE UPLOAD SIZE LIMIT ---
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
 # --- SWAGGER ---
 open.api.title=${API_TITLE:API document}
 open.api.version=${API_VERSION:1.0.0}
