--- a/hit-networking-base/pom.xml
+++ b/hit-networking-base/pom.xml
@@ -204,6 +204,18 @@
 			<version>5.2.2</version>
 		</dependency>
 
+		<!-- google cloud -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-vision</artifactId>
+			<version>3.20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-translate</artifactId>
+			<version>2.24.0</version>
+		</dependency>
+
 
 	</dependencies>
 
