--- a/hit-networking-base/src/main/resources/application.properties
+++ b/hit-networking-base/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:8081}
 spring.application.name=hit-networking
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/Hit_Network?createDatabaseIfNotExist=true}
 spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.password=${DB_PASSWORD:12345678}
 spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 
